# xreader

./: .gitignore  AUTHORS  INSTALL.md  Makefile.am  NEWS  NEWS.gnome  README  README.md  TODO  atril-document.pc.in  atril-view.h  atril-view.pc.in  autogen.sh  config.h.in~  configure.ac  evince-document.pc.in  evince-view.pc.in  makepot  meson.build  meson_options.txt  test-pyxreader  xreader-document.h  xreader-document.pc.in  xreader-view.h  xreader-view.pc.in  xreader.pot
.tx/: config
backend/: Makefile.am  backend.symbols  meson.build
backend/comics/: Makefile.am  comics-document.c  comics-document.h  comicsdocument.atril-backend.in  comicsdocument.xreader-backend.desktop.in  comicsdocument.xreader-backend.in  ev-archive.c  ev-archive.h  meson.build
backend/djvu/: Makefile.am  djvu-document-private.h  djvu-document.c  djvu-document.h  djvu-links.c  djvu-text-page.c  djvu-text-page.h  djvudocument.atril-backend.in  djvudocument.xreader-backend.desktop.in  djvudocument.xreader-backend.in  meson.build
backend/dvi/: Makefile.am  dvi-document.c  dvi-document.h  dvidocument.xreader-backend.desktop.in  dvidocument.xreader-backend.in  meson.build
backend/epub/: Makefile.am  epub-document.c  epub-document.h  epubdocument.atril-backend.in  epubdocument.xreader-backend.desktop.in  epubdocument.xreader-backend.in  meson.build
backend/impress/: Makefile.am  impress-document.c  (+2 more)
data/: Makefile.am  atril-ui.xml  atril.1  atril.appdata.xml.in  atril.convert  atril.desktop.in.in  evince.1  evince.convert  evince.desktop.in.in  meson.build  org.mate.Atril.gschema.xml  org.mate.Atril.gschema.xml.in  org.mate.Evince.gschema.xml.in  org.mate.atril.Daemon.service.in  org.mate.evince.Daemon.service.in  org.x.reader.Daemon.service.in  org.x.reader.gschema.xml  xreader-previewer-ui.xml  xreader-toolbar.xml  xreader-ui.xml  xreader.1  xreader.appdata.xml.in  xreader.css  xreader.desktop.in.in
help/: ChangeLog  LINGUAS  Makefile.am  meson.build
libdocument/: Makefile.am  ev-annotation.c  ev-annotation.h  ev-async-renderer.h  ev-attachment.c  ev-attachment.h  ev-backends-manager.c  ev-backends-manager.h  ev-debug.c  ev-debug.h  ev-document-annotations.c  ev-document-annotations.h  ev-document-attachments.c  ev-document-attachments.h  ev-document-factory.c  ev-document-factory.h  ev-document-find.c  ev-document-find.h  ev-document-fonts.c  ev-document-fonts.h  ev-document-forms.c  ev-document-forms.h  ev-document-images.c  ev-document-images.h  ev-document-info.h  ev-document-layers.c  ev-document-layers.h  ev-document-links.c  ev-document-links.h  ev-document-misc.c  ev-document-misc.h  ev-document-print.c  ev-document-print.h  ev-document-security.c  ev-document-security.h  ev-document-text.h  ev-document-thumbnails.c  ev-document-thumbnails.h  ev-document-transition.c  ev-document-transition.h  (+34 more)
libmisc/: Makefile.am  ev-page-action-widget.c  ev-page-action-widget.h  ev-page-action.c  ev-page-action.h  meson.build
libview/: Makefile.am  ev-annotation-window.c  ev-annotation-window.h  ev-document-model.c  ev-document-model.h  ev-job-scheduler.c  ev-job-scheduler.h  ev-jobs.c  ev-jobs.h  ev-link-accessible.c  ev-link-accessible.h  ev-loading-window.c  ev-loading-window.h  ev-page-cache.c  ev-page-cache.h  ev-pixbuf-cache.c  ev-pixbuf-cache.h  ev-print-operation.c  ev-print-operation.h  ev-stock-icons.c  ev-stock-icons.h  ev-timeline.c  ev-timeline.h  ev-transition-animation.c  ev-transition-animation.h  ev-view-accessible.c  ev-view-accessible.h  ev-view-cursor.c  ev-view-cursor.h  ev-view-presentation.c  ev-view-presentation.h  ev-view-private.h  ev-view-type-builtins.c.template  ev-view-type-builtins.h.template  ev-view.c  ev-view.h  ev-web-view.c  ev-web-view.h  meson.build
previewer/: Makefile.am  atril-previewer.1  ev-previewer-resources.c  ev-previewer-window.c  ev-previewer-window.h  ev-previewer.c  meson.build  previewer-ui.xml  previewer.gresource.xml  xreader-previewer.1  xreader-previewer.css
properties/: Makefile.am  ev-properties-main.c  ev-properties-view.c  ev-properties-view.h  libatril-properties-page.caja-extension.in  libatril-properties-page.caja-extension.in.in
properties-caja/: Makefile.am  ev-properties-main.c  ev-properties-view.c  ev-properties-view.h  libxreader-properties-page.caja-extension.in.in
properties-nemo/: Makefile.am  ev-properties-main.c  ev-properties-view.c  libxreader-properties-page.nemo-extension.in.in
shell/: Makefile.am  atril-icon.rc  eggfindbar.c  eggfindbar.h  ev-annotation-properties-dialog.c  ev-annotation-properties-dialog.h  ev-annotations-toolbar.c  ev-annotations-toolbar.h  ev-application.c  ev-application.h  ev-convert-metadata.c  ev-daemon-gdbus-generated.c  ev-daemon-gdbus-generated.h  ev-daemon-gdbus.xml  ev-daemon.c  ev-file-monitor.c  ev-file-monitor.h  ev-gdbus-generated.c  ev-gdbus-generated.h  ev-gdbus.xml  ev-history-action-widget.c  ev-history-action-widget.h  ev-history-action.c  ev-history-action.h  ev-history.c  ev-history.h  ev-keyring.c  ev-keyring.h  ev-landing-view.c  ev-landing-view.h  ev-media-player-keys.c  ev-message-area.c  ev-message-area.h  ev-metadata.c  ev-metadata.h  ev-navigation-action-widget.c  ev-open-recent-action.c  ev-password-view.c  ev-password-view.h  ev-preferences-dialog.c  (+42 more)
test/: meson.build  test1.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  testBookmarksMenu.py  testCommon.py  testEditMenu.py  testEncryptedFile.py  testFileMenu.py  testFileReloading.py  testGoMenu.py  testHelpMenu.py  testWrongFileExtension.py  testZoom.py
thumbnailer/: Makefile.am  atril-thumbnailer-comics.schemas.in  atril-thumbnailer-djvu.schemas.in  atril-thumbnailer-dvi.schemas.in  atril-thumbnailer-ps.schemas.in  atril-thumbnailer-xps.schemas.in  atril-thumbnailer.1  atril-thumbnailer.c  atril-thumbnailer.schemas.in  evince-thumbnailer-comics.schemas.in  evince-thumbnailer-djvu.schemas.in  evince-thumbnailer-dvi.schemas.in  evince-thumbnailer-ps.schemas.in  evince-thumbnailer.c  evince-thumbnailer.schemas.in  meson.build  xreader-thumbnailer.1  xreader-thumbnailer.c  xreader.thumbnailer.in
(+328 files in other folders)
