ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}

SUBDIRS =       \
    cut-n-paste \
    data        \
    libdocument \
    backend     \
    libview     \
    libmisc     \
    properties  \
    shell       \
    po          \
    help

if ENABLE_TESTS
    SUBDIRS += test
endif

if ENABLE_THUMBNAILER
    SUBDIRS += thumbnailer
endif

if ENABLE_PREVIEWER
    SUBDIRS += previewer
endif

NULL =

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = \
    atril-document-$(EV_API_VERSION).pc \
    atril-view-$(EV_API_VERSION).pc \
    $(NULL)

headerdir = $(includedir)/atril/$(EV_API_VERSION)
header_DATA = \
    atril-document.h \
    atril-view.h \
    $(NULL)

# Applications 

intltool_extra = intltool-extract.in intltool-merge.in intltool-update.in

EXTRA_DIST =            \
    $(intltool_extra)   \
    $(header_DATA)      \
    autogen.sh

DISTCLEANFILES =        \
    intltool-extract    \
    intltool-merge      \
    intltool-update

MAINTAINERCLEANFILES =       \
    ChangeLog                \
    intltool-extract         \
    intltool-merge           \
    intltool-update          \
    $(srcdir)/INSTALL        \
    $(srcdir)/aclocal.m4     \
    $(srcdir)/autoscan.log   \
    $(srcdir)/compile        \
    $(srcdir)/config.guess   \
    $(srcdir)/config.h.in    \
    $(srcdir)/config.sub     \
    $(srcdir)/configure      \
    $(srcdir)/configure.scan \
    $(srcdir)/depcomp        \
    $(srcdir)/install-sh     \
    $(srcdir)/ltmain.sh      \
    $(srcdir)/missing        \
    $(srcdir)/mkinstalldirs  \
    $(srcdir)/omf.make       \
    $(srcdir)/xmldocs.make   \
    $(srcdir)/gtk-doc.make   \
    $(srcdir)/po/Makefile.in.in \
    `find "$(srcdir)" -type f -name Makefile.in -print`

DISTCHECK_CONFIGURE_FLAGS =   \
    --disable-schemas-compile \
    --enable-gtk-doc          \
    --disable-caja            \
    --disable-tests           \
    --disable-silent-rules

distuninstallcheck_listfiles = find . -type f -print | grep -v /share/mate/help/ | grep -v \.omf

dist-hook:
		@if test -d "$(srcdir)/.git"; \
		then \
				echo Creating ChangeLog && \
				( cd "$(top_srcdir)" && \
				  echo '# Generated by Makefile. Do not edit.'; echo; \
				  $(top_srcdir)/missing --run git log --stat ) > ChangeLog.tmp \
				&& mv -f ChangeLog.tmp $(distdir)/ChangeLog \
				|| ( rm -f ChangeLog.tmp ; \
					 echo Failed to generate ChangeLog >&2 ); \
		else \
				echo A git clone is required to generate a ChangeLog >&2; \
		fi

-include $(top_srcdir)/git.mk
